argocd/create-development-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
