argocd/deploy-mssql-server.yml
# Actual SQL Server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
  namespace: gardentest-rich
  labels:
    app: mssql
spec:
  selector:
    matchLabels:
      app: mssql
  replicas: 1
  strategy:
    type: Recreate  #RollingUpdate
  template:
    metadata:
      labels:
        app: mssql
    spec:
        
        #volumes:
        #  - name: mssql-data
        #    hostPath:
        #      path: /tmp
        #      type: Directory
        #  - name: mssql-claim
        #    persistentVolumeClaim:
        #      claimName: mssql-data
        
        
        
        
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 10001
        
      hostNetwork: true
      containers:
        - name: mssql
          image: 'mcr.microsoft.com/mssql/server:2022-latest'
          ports:
            - name: bob
              containerPort: 1433
          volumeMounts:
              - name: mssql-volume
                mountPath: /var/opt/mssql
      volumes:
        - name: mssql-volume
          persistentVolumeClaim:
            claimName: mssql-claim
