argocd/deploy-consumerapp1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumerapp
  namespace: gardentest-rich
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "1"

spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumerapp1
  template:
    metadata:
      labels:
        app: consumerapp1
    spec:
      containers:
      - image: reg.qdos.ddns.net/gardentest-rich/consumerapp1-build:v-d9436dc255
        name: consumerapp1
        command:
          - dotnet
          - ConsumerApp1.dll
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
      imagePullSecrets:
      - name: myrepo
  

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consumerapp1
  name: consumerportal-svc
  namespace: gardentest-rich
spec:
  type: ClusterIP
  ports:
    - name: consumerportal-svc
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: consumerapp1
