argocd/deploy-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "3"
 
    kubernetes.io/ingress.class: "nginx"
 #         nginx.ingress.kubernetes.io/ssl-redirect: "false"
 #         nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 #         nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  rules:
    - host: web.gardentest.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webportal-svc
                port:
                  number: 80           
    - host: consumer.gardentest.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: consumerportal-svc
                port:
                  number: 80                      
  tls:
    - hosts:
      - web.gardentest.dev
      - consumer.gardentest.dev
      secretName: gardentest-tls-secret
